@@ -3,6 +3,9 @@
 
 dialogfe (05 Jan 2005):
 
+  26 Mar 2005; Preston Cody <codeman@gentoo.org>
+  ow my colon is missing.
+  
   25 Mar 2005; Preston Cody <codeman@gentoo.org>
   added another patch from zahna for portage tarball selection.
   Added a choice for local_install which determines error checking on tarballs
